--- a/Infraestructure/ZurichAPI.Data.SQL/ZurichAPI.Data.SQL.csproj
+++ b/Infraestructure/ZurichAPI.Data.SQL/ZurichAPI.Data.SQL.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Core\ZurichAPI.Models\ZurichAPI.Models.csproj" />
     <ProjectReference Include="..\..\Core\ZurichAPI.Shared\ZurichAPI.Shared.csproj" />
   </ItemGroup>
