--- a/ZurichAPI/ZurichAPI.csproj
+++ b/ZurichAPI/ZurichAPI.csproj
@@ -7,8 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.14" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Core\ZurichAPI.Infrastructure\ZurichAPI.Infrastructure.csproj" />
     <ProjectReference Include="..\Infraestructure\ZurichAPI.Data.SQL\ZurichAPI.Data.SQL.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
