--- a/Core/ZurichAPI.Infrastructure/ZurichAPI.Infrastructure.csproj
+++ b/Core/ZurichAPI.Infrastructure/ZurichAPI.Infrastructure.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Implementations\" />
-    <Folder Include="Interfaces\" />
+    <ProjectReference Include="..\..\Infraestructure\ZurichAPI.Data.SQL\ZurichAPI.Data.SQL.csproj" />
+    <ProjectReference Include="..\ZurichAPI.Models\ZurichAPI.Models.csproj" />
   </ItemGroup>
 
 </Project>
