--- a/ZurichAPI/ZurichAPI.csproj
+++ b/ZurichAPI/ZurichAPI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -15,10 +15,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Core\ZurichAPI.Infrastructure\ZurichAPI.Infrastructure.csproj" />
     <ProjectReference Include="..\Infraestructure\ZurichAPI.Data.SQL\ZurichAPI.Data.SQL.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
