Se añade servicios para clientes y redis

--- a/ZurichAPI/appsettings.json
+++ b/ZurichAPI/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "ConnectionLocal": "Server=DESKTOP-BOHIRD0;Database=ZurichBD;Trusted_Connection=True;TrustServerCertificate=True;"
+    "ConnectionLocal": "Server=DESKTOP-BOHIRD0;Database=ZurichBD;Trusted_Connection=True;TrustServerCertificate=True;",
+    "Redis": "localhost:6379"
   },
   "JwtSettings": {
     "SecretKey": "9A@6TfQ1zLpE3gXb7D!mVnW2ZcRjUqYe",
